# evolution-sim

./: .clang-tidy  .gitignore  CMakeLists.txt  conanfile.py  readme.md
cmake/: conan.cmake
config/: config.json
docker/: Dockerfile
lua/: main.lua
scripts/: build.sh  run.sh
src/: config.h  evolution-sim.cpp  evolution-sim.h  global.h.in  lua.h  main.cpp  raygates.cpp  raygates.h  terrain_generator.cpp  terrain_generator.h  window.cpp  window.h
src/animals/: Animal.cpp  Animal.h  animal.cpp  animal.h  rabbit.cpp  rabbit.h  wolf.cpp  wolf.h
src/entities/: entity_manager.cpp  entity_manager.h  stats.h
src/plants/: plant.cpp  plant.h
test/: test.cpp
